k8s/deploy-ser.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: nginxscv
  annotations:
      service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
   - protocol: TCP
     port: 80
     targetPort: 8080
     #nodePort: 30000
