k8s/ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginxing
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec: 
  rules:
  - host: mydemologin.com
    http:
      paths:
      - path: /
        #pathType: Prefix
        backend:
          serviceName: nginxsvc 
           #name: nginxsvc
          servicePort: 80
             #number: 80
